fixing navbar mobile on safari 10

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -344,7 +344,7 @@ h6 {
   bottom: 0;
   background: rgba(0, 0, 0, 0.9);
   transition: 0.3s;
-  -webkit-transform: translate3d(0, 0, 0);
+  transform: translate3d(0, 0, 0);
   z-index: 999;
   margin-top: 0;
 }
